--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,19 @@ body
     background: #fff;
 }
 /*header*/
+.scroll-line{
+  position: fixed;
+  z-index: 100;
+  height: 3px;
+  margin-bottom: -2px;
+  background: red;
+  width: 0%;
+}
+
 .header
 {
     padding: 2.6em 0;
+    background: white;
 }
 .logo
 {
@@ -67,10 +77,11 @@ input[type='submit']
 }
 input[type='text']
 {
-    border-style: none;
+    /*border-style: none;*/
 }
 input[value='Search']
 {
+    border-style: none;
     color: #d8d8d8;
 }
 .nav_bar li
@@ -324,6 +335,7 @@ input[value='Search']
 }
 .ablity
 {
+
     margin-top: 2em;
     padding-left: 3em;
 }
@@ -334,6 +346,10 @@ input[value='Search']
     padding-bottom: 9px;
 
     color: #000;
+}
+.progressBox
+{
+    background-color: gray;
 }
 .progress
 {
@@ -367,7 +383,88 @@ input[value='Search']
 
     background: #d8d8d8;
 }
-.gallery
+.grid {
+    padding: 20px 20px 100px 20px;
+    max-width: 1300px;
+    margin: 0 auto;
+    list-style: none;
+    text-align: center;
+}
+.grid li {
+    display: inline-block;
+    width: 440px;
+    margin: 0;
+    padding: 20px;
+    text-align: left;
+    position: relative;
+}
+
+.grid figure {
+    margin: 0;
+    position: relative;
+}
+
+.grid figure img {
+    max-width: 100%;
+    display: block;
+    position: relative;
+}
+
+.grid figcaption {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    background: #2c3f52;
+    color: #ed4e6e;
+}
+
+.grid figcaption h3 {
+    margin: 0;
+    padding: 0;
+    color: #fff;
+}
+
+.grid figcaption span:before {
+    content: 'by ';
+}
+
+.grid figcaption a {
+    text-align: center;
+    padding: 5px 10px;
+    border-radius: 2px;
+    display: inline-block;
+    background: #ed4e6e;
+    color: #fff;
+}
+.cs-style-2 figure img {
+    z-index: 10;
+    -webkit-transition: -webkit-transform 0.4s;
+    -moz-transition: -moz-transform 0.4s;
+    transition: transform 0.4s;
+}
+
+.cs-style-2 figure:hover img
+{
+    -webkit-transform: translateY(-90px);
+    -moz-transform: translateY(-90px);
+    -ms-transform: translateY(-90px);
+    transform: translateY(-90px);
+}
+
+.cs-style-2 figcaption {
+    height: 90px;
+    width: 100%;
+    top: auto;
+    bottom: 0;
+}
+
+.cs-style-2 figcaption a {
+    position: absolute;
+    right: 20px;
+    top: 30px;
+}
+/*.gallery
 {
     position: relative;
 
@@ -391,10 +488,10 @@ input[value='Search']
 .gallery a > img
 {
     display: block;
-
     max-width: 100%;
     height: auto;
 }
+
 .wrapper
 {
     position: absolute;
@@ -429,7 +526,7 @@ input[value='Search']
     height: auto;
 
     vertical-align: middle;
-}
+}*/
 /* //article */
 
 /*contact*/
@@ -496,22 +593,32 @@ form
 {
     display: block;
 
-    margin-top: 0;
+    margin-top: 2px;
+
+}
+input[value=“Name”]{
+   
+    border: 2px solid gray;
+}
+input[value=“E-mail”]{
+    
+    border: 2px solid gray;
 }
 textarea
 {
+    margin-top: 2px;
     width: 500px;
-    height: 150px;
+    height: 120px;
 }
 .send
 {
     top: 0;
     left: 20px;
 
-    width: 80px;
+    width: 50%;
     height: 24px;
 
-    background: #2c58ed;
+    /*background-color:  #2c58ed;*/
 }
 /*footer*/
 .footer
@@ -521,8 +628,15 @@ textarea
     background: #2c58ed;
 }
 /* //footer */
+.returnTop{
+    position: fixed;
+    width: 96px;
+    height: 96px;
+    background: url(../images/Top.png) no-repeat 0px 0px;
+}
 
-/*other*/
+    
+/*default*/
 body a
 {
     -webkit-transition: .5s all ease;
@@ -541,4 +655,4 @@ body a:visited
 {
     text-decoration: none;
 }
-/* //other */
+/* //default */
